--- a/grid/templates/includes/deal-history.html
+++ b/grid/templates/includes/deal-history.html
@@ -25,6 +25,9 @@
                                                 <p>{% if item.history_user %}{{ item.history_user.get_full_name }}{% else %}{% trans "Unknown user" %}{% endif %}</p>
                                             </td>
                                             <td>
+                                                <p><span class="fa fa-{% if item.fully_updated %}check-{% endif %}circle"></span></p>
+                                            </td>
+                                            <td>
                                                 <p>
                                                 {% if item.id != activity.id %}
                                                 <a type="button" href="{% url 'deal_detail' deal_id=item.activity_identifier history_id=item.id %}">
