--- a/grid/templates/includes/deal-history.html
+++ b/grid/templates/includes/deal-history.html
@@ -25,7 +25,7 @@
                                                 <p>{% if item.history_user %}{{ item.history_user.get_full_name }}{% else %}{% trans "Unknown user" %}{% endif %}</p>
                                             </td>
                                             <td>
-                                                <p><span class="fa fa-{% if item.fully_updated %}check-{% endif %}circle"></span></p>
+                                                <p class="toggle-tooltip" title="{% if item.fully_updated %}{% trans "Fully updated" %}{% else %}{% trans "Updadet" %}{% endif %}"><span class="fa fa-{% if item.fully_updated %}check-{% endif %}circle"></span></p>
                                             </td>
                                             <td>
                                                 <p>
