--- a/grid/templates/modals/delete-deal.html
+++ b/grid/templates/modals/delete-deal.html
@@ -10,8 +10,9 @@
         <p>{% trans "Are you sure you want to delete this deal?" %}</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "No, cancel" %}</button>
-        <button type="button" class="btn btn-primary delete-deal" href="{% url "delete_deal" deal_id=deal_id %}">{% trans "Yes, delete" %}</input>
+        <form method="POST" action="{% url 'delete_deal' deal_id=deal_id %}">{% csrf_token %}
+          <button type="button" class="btn btn-default" data-dismiss="modal">{% trans "No, cancel" %}</button>
+          <button type="submit" class="btn btn-primary">{% trans "Yes, delete" %}</button>
         </form>
       </div>
     </div><!-- /.modal-content -->
