--- a/grid/templates/change-deal.html
+++ b/grid/templates/change-deal.html
@@ -22,9 +22,9 @@
 {% block messages %}
 {{ block.super }}
 {% if activity.fk_status_id == 1 %}
-<p class="alert alert-warning">{% trans "This deal version is pending, please accept or reject it in the manage section." %}</p>
+<p class="alert alert-danger">{% trans "This deal version is pending, please accept or reject it in the manage section." %}</p>
 {% else %}{% if activity.fk_status_id == 4 %}
-<p class="alert alert-warning">{% trans "This deal has been deleted. It is not visible for public users." %}</p>
+<p class="alert alert-danger">{% trans "This deal has been deleted. It is not visible for public users." %}</p>
 {% endif %}{% endif %}
 {% endblock %}
 
