--- a/grid/templates/deal-detail.html
+++ b/grid/templates/deal-detail.html
@@ -37,9 +37,9 @@
 {% block messages %}
 {{ block.super }}
 {% if activity.fk_status_id == 1 %}
-<p class="alert alert-warning">{% trans "This deal version is pending, please accept or reject it in the manage section." %}</p>
+<p class="alert alert-danger">{% trans "This deal version is pending, please accept or reject it in the manage section." %}</p>
 {% else %}{% if activity.fk_status_id == 4 %}
-<p class="alert alert-warning">{% trans "This deal has been deleted." %}</p>
+<p class="alert alert-danger">{% trans "This deal has been deleted." %}</p>
 {% endif %}{% endif %}
 {% endblock %}
 
