--- a/landmatrix/static/css/content.scss
+++ b/landmatrix/static/css/content.scss
@@ -253,6 +253,27 @@ div.fullwidth.fullwidth-lightgrey {
   font-weight: 200;
 }
 
+@font-face {
+    font-family: 'Unit';
+    src: url('/static/fonts/unit-bold-webfont.eot');
+    src: url('/static/fonts/unit-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/static/fonts/unit-bold-webfont.woff') format('woff'),
+         url('/static/fonts/unit-bold-webfont.ttf') format('truetype'),
+         url('/static/fonts/unit-bold-webfont.svg#unit-boldregular') format('svg');
+    font-weight: bold;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Unit';
+    src: url('/static/fonts/unit-regular-webfont.eot');
+    src: url('/static/fonts/unit-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/static/fonts/unit-regular-webfont.woff') format('woff'),
+         url('/static/fonts/unit-regular-webfont.ttf') format('truetype'),
+         url('/static/fonts/unit-regular-webfont.svg#unit-regularregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body,
 p,
 a,
@@ -278,9 +299,17 @@ p {
   line-height: 2em;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Unit', sans-serif;
+  font-weight: bold;
+}
+
 h1 {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 600;
   text-transform: uppercase;
   color: $lm_orange;
 }
@@ -288,8 +317,6 @@ h1 {
 h2,
 h3,
 .wrap h4 {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: bold;
   color: $lm_dark;
 }
 
