--- a/landmatrix/static/css/main.css
+++ b/landmatrix/static/css/main.css
@@ -779,6 +779,9 @@ h6 {
   margin: -6px 0 0;
   text-transform: none; }
 
+.newsitem small {
+  color: #919191; }
+
 .messages {
   font-size: 24px; }
 
