--- a/landmatrix/static/css/main.css
+++ b/landmatrix/static/css/main.css
@@ -771,7 +771,7 @@ h3,
 
 h5,
 h6 {
-  font-size: 18px; }
+  font-size: 16px; }
 
 .newsitem h4 {
   font-size: 18px;
@@ -943,6 +943,9 @@ h1 {
   text-transform: uppercase;
   color: #fc941f; }
 
+h2 {
+  text-transform: uppercase; }
+
 h2,
 h3,
 .wrap h4 {
@@ -953,10 +956,6 @@ h3,
 .wrap > h4 {
   margin-top: 2em;
   margin-bottom: 2em; }
-
-h2,
-h4 {
-  text-transform: uppercase; }
 
 h4 {
   color: #919191; }
@@ -1105,7 +1104,8 @@ footer h4 {
   margin-top: 10px;
   margin-bottom: 10px;
   font-weight: 600;
-  color: #4a4a4a; }
+  color: #4a4a4a;
+  text-transform: uppercase; }
 
 footer p,
 footer li,
