--- a/landmatrix/static/css/main.css
+++ b/landmatrix/static/css/main.css
@@ -931,6 +931,7 @@ p {
   line-height: 2em; }
 
 h1,
+h1
 h2,
 h3,
 h4,
@@ -938,10 +939,30 @@ h5,
 h6 {
   font-family: 'Unit', sans-serif;
   font-weight: bold; }
+  h1 a,
+  h1
+h2 a,
+  h3 a,
+  h4 a,
+  h5 a,
+  h6 a {
+    font-family: 'Unit', sans-serif;
+    font-weight: bold; }
+    h1 a:hover,
+    h1
+h2 a:hover,
+    h3 a:hover,
+    h4 a:hover,
+    h5 a:hover,
+    h6 a:hover {
+      text-decoration: none;
+      border-bottom: 3px solid #fc941f; }
 
 h1 {
   text-transform: uppercase;
   color: #fc941f; }
+  h1 a:hover {
+    border-color: #fc941f; }
 
 h2 {
   text-transform: uppercase; }
